# hpc_project

./: CMakeLists.txt  lib.c  main.c
ex1/: ex1_mpi.c  ex1_omp.c  ex1_seq.c
ex2/: matrix_vector_omp.c  matrix_vector_seq.c  mpi_mat_vect_mult.c
ex2/matrix-power/: matrix_power_omp.c  matrix_power_seq.c
ex2/matrix-vector/: matrix_vector_mpi.c  matrix_vector_omp.c  matrix_vector_seq.c
ex3/: 3DPoint.c  3DPoint.h  ex3_mpi_program.c
report/: report.tex
report/data/: ex1.csv  matrix_power2.csv  matrix_power3.csv  matrix_vector_naive.csv  matrix_vector_opti.csv
report/python-script/: generate_graphs.py  generate_graphs_seepdup.py
utils/: utils.c  utils.h
